--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
             </div>
                 <div class="projets-card">
                     <div class="projets-image">
-                        <img src="images/adrar.JPG" />
+                        <img src="images/adrar.jpeg" />
                     </div>
                     <div class="projets-info">
                      <p class="projets-category"> Elaboration de devis et métré</p>
