--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
                     </div>
                     <div class="projets-card">
                         <div class="projets-image">
-                            <img src="images/jalco.JPG" />
+                            <img src="images/jalco.jpeg" />
                         </div>
                         <div class="projets-info">
                          <p class="projets-category"> Dimensionnement et calcul du ferraillage des radiers et socles en béton armé & suivi des travaux de réalisation</p>
